--- a/translations/ru.json
+++ b/translations/ru.json
@@ -1,15 +1,15 @@
 {
-        "title": "Импорт в Scribus",
-		"lines_detected": "Обнаружено линий",
-        "input_label": "Номер строки для импорта",
-        "import_button": "Импортировать",
-        "import_all_button": "Импортировать всё",
-        "clear_button": "Очистить",
-        "open_file_button": "Открыть файл .txt",
-        "help_button": "Справка",
-        "developer_label": "Автор: Tijo",
-        "error_label": "Ошибка",
-        "invalid_line_number": "Неверный номер строки.",
-        "enter_valid_line_number": "Введите корректный номер строки.",
-        "help": "Этот скрипт позволяет импортировать строки из файла CSV (.txt) в Scribus. Убедитесь, что вы предварительно очистили и форматировали ваш файл Excel перед импортом данных в файл (.txt).\n\nИнструкция:\n1. Нажмите кнопку \"Открыть файл .txt\", чтобы выбрать файл (.txt).\n2. Используйте кнопку \"+\" для начала навигации без необходимости набирать номер на клавиатуре. Используйте кнопки \"<---\" и \"--->\" для коррекции номера строки.\n3. Первые три слова строки отобразятся как ориентир.\n4. Нажмите кнопку \"Импортировать\", чтобы добавить полную строку в Scribus в его текстовое поле.\n5. Используйте кнопку \"Импортировать всё\", чтобы импортировать весь файл целиком.\n6. Используйте кнопку \"Очистить\", чтобы удалить содержимое поля ввода.\n\nУбедитесь, что Scribus открыт, и у вас есть активный документ Scribus перед импортом строк."
-    }
+    "title": "Импорт в Scribus",
+    "lines_detected": "Обнаружено линий",
+    "input_label": "Номер строки для импорта",
+    "import_button": "Импортировать",
+    "import_all_button": "Импортировать всё",
+    "clear_button": "Очистить",
+    "open_file_button": "Открыть файл",
+    "help_button": "Справка",
+    "developer_label": "Автор: Tijo",
+    "error_label": "Ошибка",
+    "invalid_line_number": "Неверный номер строки.",
+    "enter_valid_line_number": "Введите корректный номер строки.",
+    "help": "Этот скрипт позволяет импортировать строки из файла .txt или .csv в Scribus. Убедитесь, что вы предварительно очистили и форматировали ваш файл Excel перед импортом данных в файл .txt или .csv.\n\nИнструкция:\n1. Нажмите кнопку \"Открыть файл .\", чтобы выбрать файл .txt или .csv.\n2. Используйте кнопку \"+\" для начала навигации без необходимости набирать номер на клавиатуре. Используйте кнопки \"<---\" и \"--->\" для коррекции номера строки.\n3. Первые три слова строки отобразятся как ориентир.\n4. Нажмите кнопку \"Импортировать\", чтобы добавить полную строку в Scribus в его текстовое поле.\n5. Используйте кнопку \"Импортировать всё\", чтобы импортировать весь файл целиком.\n6. Используйте кнопку \"Очистить\", чтобы удалить содержимое поля ввода.\n\nУбедитесь, что Scribus открыт, и у вас есть активный документ Scribus перед импортом строк."
+}
